# bridge

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  bridge.spec  config.h.in  configure  configure.ac
etc/: Makefile.am  Makefile.in  bridge.conf.in  bridge_bs.conf.in  bridge_rm.conf.in  bridged.conf.in  bridgedapi.conf.in
etc/init.d/: Makefile.am  Makefile.in  bridged.in  bridged.service
etc/logrotate.d/: Makefile.am  Makefile.in  bridged  bridged.systemd.in
etc/sysconfig/: Makefile.am  Makefile.in  bridged
lib/: Makefile.am  Makefile.in
lib/bridge/: Makefile.am  Makefile.in  bridge.h  bridge_common.c  bridge_common.h  bridge_idlist.c  bridge_manager.c  bridge_nodelist.c  bridge_range.c
lib/bridged/: Makefile.am  Makefile.in  bridge_engine.c  bridge_engine.h  bridge_request.c  bridge_request.h  bridge_rus.c  bridge_rus.h  bridgedapi.c  bridgedapi.h
lib/confparse/: Makefile.in  analyse.c  analyse.h  conf_lex.c  conf_lex.l  conf_yacc.c  conf_yacc.y  config_parsing.c  config_parsing.h
lib/xternal/: Makefile.am  Makefile.in  xerror.h  xfreelist.c  xfreelist.h  xlibrary.c  xlibrary.h  xlogger.c  xlogger.h  xmessage.c  xmessage.h  xqueue.c  xqueue.h  xstream.c  xstream.h
m4/: bridge.m4  lsf.m4  nqsII.m4  slurm.m4  torque.m4
plugins/: Makefile.am  Makefile.in
plugins/batch/: Makefile.am  Makefile.in
plugins/batch/lsf/: Makefile.am  Makefile.in  lsf_batch_manager.c  lsf_batch_node.c  lsf_batch_queue.c  lsf_batch_session.c
plugins/batch/lsf_slurm/: Makefile.am  Makefile.in  lsf_batch_manager.c  lsf_batch_node.c  lsf_batch_queue.c  lsf_batch_session.c
plugins/batch/slurm/: Makefile.am  Makefile.in  batch_common.c  batch_common.h  batch_manager.c  batch_node.c  batch_queue.c  batch_session.c
plugins/batch/torque/: Makefile.am  Makefile.in  batch_common.c  batch_common.h  batch_manager.c  batch_node.c  batch_queue.c  batch_session.c
plugins/rm/: Makefile.am  Makefile.in
plugins/rm/slurm/: Makefile.am  Makefile.in  slurm_rm_manager.c
scripts/: Makefile.am  Makefile.in
scripts/addons/: Makefile.am  Makefile.in  array.ad  autoaccount.ad  autocarto.ad  autodefmem.ad  autoexclusive.ad  automem-slurm-resize.ad  automem-slurm.ad  autompi.ad  autopacking.ad  autoqueue.ad  autoswitches-slurm.ad  bcast.ad  bridge-profile.ad  bulk-flux.ad  bullmpi-slurm-direct.ad  bullmpi-slurm-pin.ad  bullmpi-slurm.ad  bullxmpi-slurm-direct.ad  bullxmpi-slurm-pin.ad  bullxmpi-slurm.ad  compat-DAM.ad  ddt.ad  dirige-DAM.ad  dirige.ad  env-cleaner.ad  example.ad  filesystems.ad  flux.ad  gpus-flux.ad  intelmpi-slurm.ad  inter-para-limits.ad  logger.ad  mpmd-cluster-heterogenous.ad  mpmd-cluster-wrapper.ad  mpmd-cluster.ad  mpmd-ws.ad  mvapich-slurm.ad  mvapich2-slurm.ad  (+20 more)
scripts/batch_system/: Makefile.am  Makefile.in  mdel.in  mpp.in  mstat.in  msub.in  msub.in.orig
scripts/batch_system/plugins/: flux  generic  lsf  nqsII  slurm  torque
scripts/batch_system/profiles/: lsf.sh  nqsII.sh  slurm.sh
scripts/common/: Makefile.am  Makefile.in  bridge_addon  bridge_command.in  bridge_lock_mgr  bridge_printer  bridge_readconf  bridge_toolbox
scripts/resource_manager/: Makefile.am  Makefile.in  mpinfo.in  mprun.in  mpstat.in
scripts/resource_manager/addons/: get_task_info
scripts/resource_manager/plugins/: flux  generic  lsf  nqsII  rms  slurm  torque  ws
scripts/resource_manager/profiles/: rms.sh  slurm.sh
src/: Makefile.am  Makefile.in
src/bridge/: Makefile.am  Makefile.in  bmstat.c  bnstat.c  bqstat.c  bsstat.c  idlist.c  nodelist.c  rmastat.c  rmmstat.c  rmpstat.c
src/bridged/: Makefile.am  Makefile.in  bridged.c  bridged_engine.c  bridged_engine.h  worker.c  worker.h
src/bridgedc/: Makefile.am  Makefile.in  bridgedc.c
src/helpers/: Makefile.am  Makefile.in  bridge.mpmd.wrapper.c  bridge.mpmd.wrapper.logic.c
