scriptsdir			=	$(datadir)/scripts
addonscriptsdir			=	$(scriptsdir)/addons

dist_addonscripts_DATA		=	autoaccount.ad \
					autocarto.ad \
					autodefmem.ad \
					autoexclusive.ad \
					automem-slurm.ad \
					automem-slurm-resize.ad \
                                        autompi.ad \
                                        autopacking.ad \
                                        autoqueue.ad \
                                        bcast.ad \
                                        bridge-profile.ad \
                                        bullmpi-slurm.ad \
                                        bullmpi-slurm-direct.ad \
                                        bullmpi-slurm-pin.ad \
                                        bullxmpi-slurm.ad \
                                        bullxmpi-slurm-direct.ad \
                                        bullxmpi-slurm-pin.ad \
                                        compat-DAM.ad \
                                        ddt.ad \
                                        dirige-DAM.ad \
                                        example.ad \
                                        intelmpi-slurm.ad \
                                        inter-para-limits.ad \
                                        logger.ad \
                                        mpmd-cluster.ad \
                                        mpmd-cluster-wrapper.ad \
                                        mpmd-ws.ad \
                                        mvapich2-slurm.ad \
                                        mvapich-slurm.ad \
                                        openmpi-slurm.ad \
                                        openmpi-slurm-direct.ad \
                                        qos.ad \
                                        relax_affinity.ad \
                                        spank-stats.ad \
					strace.ad \
                                        shell.ad \
                                        tagoutput.ad \
                                        totalview.ad \
                                        vtune.ad \
                                        wrapper-DAM.ad \
                                        x11.ad

dist_addonscripts_SCRIPTS	=	vtune.sh spank-stats.sh strace.sh
