scriptsdir		=	$(datadir)/scripts
bsscriptsdir		=	$(scriptsdir)/batch_system
bspluginsdir		=	$(bsscriptsdir)/plugins
bsaddonsdir		=	$(bsscriptsdir)/addons
bsprofilesdir		=	$(bsscriptsdir)/profiles

dist_bin_SCRIPTS	=	msub mstat mdel mpp

dist_bsplugins_DATA	=	plugins/generic plugins/lsf plugins/nqsII \
				plugins/slurm plugins/torque plugins/flux

dist_bsaddons_DATA	=	

dist_bsprofiles_DATA	=	profiles/slurm.sh profiles/lsf.sh \
				profiles/nqsII.sh
