scriptsdir		=	$(datadir)/scripts
rmscriptsdir		=	$(scriptsdir)/resource_manager
rmpluginsdir		=	$(rmscriptsdir)/plugins
rmaddonsdir		=	$(rmscriptsdir)/addons
rmprofilesdir		=	$(rmscriptsdir)/profiles


dist_bin_SCRIPTS	=	mprun mpstat mpinfo

dist_rmplugins_DATA	=	plugins/generic plugins/slurm plugins/nqsII plugins/rms \
				plugins/torque plugins/ws plugins/lsf plugins/flux

dist_rmaddons_DATA	=	addons/get_task_info

dist_rmprofiles_DATA	=	profiles/slurm.sh profiles/rms.sh
